Fixes ITC-119: Made the caret on dropdown menus far more visible

--- a/style.css
+++ b/style.css
@@ -59,6 +59,11 @@ body { background: #f5f7f6; }
     color: white;
 }
 
+.navbar #menu-main li a.dropdown-toggle b.caret {
+    border-top-color: white;
+    border-bottom-color: white;
+}
+
 .btn-navbar { background: #4b81bf; margin-top: 0; }
 
 .navbar h3 { margin: 0; font-weight: normal; font-size: 16px; padding-left: 15px; line-height: 50px; }
